syntax = "proto3";

package api;

import "google/protobuf/timestamp.proto";

// State that changes often but also is not security-critical,
// and therefore can be wiped and overwritten without much consequence if needed.
message WebauthnVolatileState {
    map<string, WebauthnCredentialVolatileState> credentials = 1; // Keys are base64.RawURLEncoding.EncodeToString(credential ID)
}

message WebauthnCredentialVolatileState {
    uint32                    sign_count    = 1;
    google.protobuf.Timestamp last_use_time = 2;
}
